Try to fix rendering problem for Firefox on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -50,5 +50,5 @@
 
 body {
   font-weight: 400;
-  font-family: "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Helvetica Neue", "Arial", "Noto Sans", "sans-serif", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Arial", "sans-serif";
 }
